--- a/randing/index.html
+++ b/randing/index.html
@@ -46,7 +46,48 @@
                 </li>
             </ul>
         </nav>
-        
     </header>
+    <main>
+        <section id="about" class="section">
+            <header class="section"__header>
+                 <strong class="section__tag"> ABOUT </strong>
+                 <h1 class="section__title">  OZ코딩스쿨 </h1>
+            </header> 
+
+            <div class="about">
+                <!-- about card 1 code -->
+                <div class="about__card">
+                    <img class="about__icon" src="./images/about_1.svg" alt="" />
+                    <h2 class="about__title _1">빠른 강의</h2>
+                    <p class="about__text">
+                       군더더기 없는 진행으로 <br  />
+                        여러번의 시간을 절약합니다.
+                     </p>
+                </div>
+
+                <!-- about card 2 code -->
+                <div class="about__card">
+                    <img class="about__icon" src="./images/about_2.svg" alt="" />
+                    <h2 class="about__title _2">손쉬운 학습</h2>
+                    <p class="about__text">
+                        강의 페이지를 활용해서<br  />
+                        편리하게 실습할 수 있습니다.
+                    </p>
+                </div>
+
+                <!-- about card 3 code -->
+                <div class="about__card">
+                    <img class="about__icon" src="./images/about_3.svg" alt="" />
+                    <h2 class="about__title _3">플레이그라운드</h2>
+                    <p class="about__text">
+                        강의를 위해 제작한 도구가<br  />
+                        반복학습을 도와줍니다.
+                    </p>
+                </div>
+            <!-- about을 담는 div -->
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
